@@ -1,12 +1,12 @@
 # --
 # CustomerFooter.dtl - provides global HTML footer
-# Copyright (C) 2001-2006 OTRS GmbH, http://otrs.org/
+# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CustomerFooter.dtl,v 1.10 2006-12-21 16:12:27 mh Exp $
+# $Id: CustomerFooter.dtl,v 1.11 2008-02-12 09:08:07 ot Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
-# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
+# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
 # --
 
 <!-- start CI layout -->
@@ -20,7 +20,7 @@
 <!-- end CI layout -->
 <!-- start footer -->
 <a name="end"></a>
-<table border="0" width="800" cellspacing="0" cellpadding="3">
+<table border="0" width="$Data{"Width"}" cellspacing="0" cellpadding="3">
 <tr>
 <td align="right" class="small">
 $Text{"Powered by"} <a href="http://otrs.org/" class="small">$Config{"Product"} $Config{"Version"}</a>
