@@ -1,16 +1,16 @@
 # --
 # CustomerFooterSmall.dtl - provides global HTML footer
-# Copyright (C) 2001-2006 OTRS GmbH, http://otrs.org/
+# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CustomerFooterSmall.dtl,v 1.3 2006-12-21 16:12:27 mh Exp $
+# $Id: CustomerFooterSmall.dtl,v 1.4 2008-02-12 09:08:07 ot Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
-# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
+# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
 # --
 
 <!-- start footer -->
-<table border="0" width="100%" cellspacing="0" cellpadding="4">
+<table border="0" width="$Data{"Width"}" cellspacing="0" cellpadding="4">
   <tr>
     <td class="menu">
       &nbsp;
