@@ -1,16 +1,16 @@
 # --
 # Footer.dtl - provides global HTML footer
-# Copyright (C) 2001-2006 OTRS GmbH, http://otrs.org/
+# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: Footer.dtl,v 1.21 2006-12-21 16:12:27 mh Exp $
+# $Id: Footer.dtl,v 1.22 2008-02-12 09:08:07 ot Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
-# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
+# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
 # --
 
 <!-- start footer -->
-<table border="0" width="100%" cellspacing="0" cellpadding="0">
+<table border="0" width="$Data{"Width"}" cellspacing="0" cellpadding="0">
   <tr class="footer">
     <td align="right" class="footer">
       <table border="0">
