@@ -1,23 +1,0 @@
-# --
-# FooterCalendar.dtl - provides calendar specific small HTML footer
-# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
-# --
-# $Id: FooterCalendar.dtl,v 1.2 2008-02-04 16:33:10 ot Exp $
-# --
-# This software comes with ABSOLUTELY NO WARRANTY. For details, see
-# the enclosed file COPYING for license information (GPL). If you
-# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
-# --
-
-<!-- start footer -->
-<table border="0" width="225" cellspacing="0" cellpadding="4">
-  <tr>
-    <td class="footer">
-      &nbsp;
-    </td>
-  </tr>
-</table>
-<a name="end"></a>
-</body>
-</html>
-<!-- end footer -->
